# cogllama

./: CMakeLists.txt  COGLLAMAX.md  COGLLAMA_CORE_PHASE1_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  OPENCOQ_IMPLEMENTATION_SUMMARY.md  OPENCOQ_INTEGRATION_ROADMAP.md  RECURSIVE_SELF_ENHANCEMENT_IMPLEMENTATION.md  demo-opencoq-integration.py  demo-triadic-architecture.py  validate-triadic-integration.py
.github/agents/: cogllama.md  cogllamax.md  llamacog.md
.github/agents/cogllamax/: 03-knowledge.md  05-learning.md  06-communication.md  09-examples.md  README.md
.github/workflows/: generate-enhanced-triadic-issues.yml  generate-triadic-issues.yml
cogllamax/: 01-core.md  02-perception.md  04-planning.md  07-memory.md  08-tools.md  10-performance.md  README.md
docs/: expressions.md
src/cogllama-core/: CMakeLists.txt  README.md
src/cogllama-core/include/: atomspace.h  cogserver.h  expression.h
src/cogllama-core/src/: atomspace.c  cogserver.c  expression.c
src/opencog-qat/: CMakeLists.txt  extended-atomspace.h  hypergraph-utils.h  neural-symbolic-bridge.cpp  neural-symbolic-bridge.h  opencoq-integration.cpp  opencoq-integration.h  recursive-self-enhancement.cpp  recursive-self-enhancement.h  rocq-prover-bridge.cpp  rocq-prover-bridge.h
tests/: .gitignore  CMakeLists.txt  test-opencog-qat.cpp
tests/cogllama-core/: CMakeLists.txt  test-cogllama-core.c  test-expression.c
tools/: CMakeLists.txt
tools/cogllama-demo/: CMakeLists.txt  cogllama-demo.c
tools/recursive-enhancement-demo/: CMakeLists.txt  recursive-enhancement-demo.cpp
